# koltrust

./: .dockerignore  .gitignore  README.md  build-dataset.py  commands.py  data_pipeline_quality.py  doctor.py  main.py  pipeline.py  process-sample.py  publish-minio.py  pull-simulator-sample.py  pyproject.toml  sync-dataset.py  validate-data.py
airflow/dags/: koltrust_pipeline_dag.py
data-pipeline/: .gitignore  README.md  build_dataset.py  collect_kol_seeds.py  crawl_raw_data.py  crawl_tiktok_data.py  labeling.py  normalizer.py  sentiment.py  tiktok_client.py  utils.py  youtube_client.py
data-pipeline/data/input/: manual_trust_labels.csv  tiktok_usernames.txt  vn_channels.txt
documents/: API_DOCS.md  GOVERNANCE.md  MONITORING.md  PRESENTATION.md  SOURCE_LAYOUT.md
koltrust_common/: __init__.py  paths.py
livestream-simulator/: Dockerfile  README.md
livestream-simulator/app/: __init__.py  main.py  models.py  simulator.py
livestream-simulator/static/: app.js  index.html  styles.css
realtime-kol-trust/: .dockerignore  .gitignore  README.md  docker-compose.yml  requirements.txt
realtime-kol-trust/app/core/: config.py
realtime-kol-trust/backend/fastapi/: main.py
realtime-kol-trust/configs/: app.dev.yaml  app.prod.example.yaml
realtime-kol-trust/dashboard/streamlit/: app.py
realtime-kol-trust/database/cassandra/: schema.cql
realtime-kol-trust/docker/: Dockerfile.app  Dockerfile.spark
realtime-kol-trust/scripts/: predict_comment_sentiment.py  predict_kol_trust.py  process_sample.py  train_and_evaluate_from_api.py
(+7 files in other folders)
