[project]
name = "koltrust"
version = "0.1.0"
description = "A unified Big Data project for KOL data ingestion, livestream simulation, and realtime trust scoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=2.9.0,<3",
    "boto3>=1.34.0",
    "cassandra-driver>=3.29.1",
    "certifi>=2024.2.2",
    "confluent-kafka>=2.4.0",
    "fastapi>=0.115.6",
    "joblib>=1.3.0",
    "pandas>=2.2.0",
    "pandera>=0.20.0",
    "plotly>=5.22.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.10.4",
    "pyspark>=3.4.0,<3.5.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.36.0",
    "TikTokApi>=7.3.3,<8",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv]
package = false
